concord_macros/tests/trybuild/fail/codegen_contract/reserved_records_wrong_arity.rs
use concord_macros::api;

api! {
    client ReservedRecordsWrongArityApi { base "https://example.com" }

    GET Events
        path ["events"]
        -> Records<String>
}

fn main() {}
