concord_macros/tests/trybuild/fail/codegen_contract/reserved_records_wrong_arity.stderr
error: reserved endpoint I/O family `Records` expects exactly two type arguments
 --> tests/trybuild/fail/codegen_contract/reserved_records_wrong_arity.rs:8:12
  |
8 |         -> Records<String>
  |            ^^^^^^^^^^^^^^^
